services/immich/server/resources/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  template:
    spec:
      volumes:
        - name: truenas-media
          persistentVolumeClaim:
            claimName: truenas-media
      containers:
        - name: immich
          image: ghcr.io/immich-app/immich-server:v1.102.3
          command: [start.sh]
          args: [server]
          resources:
            limits:
              memory: 1G
          volumeMounts:
            - name: truenas-media
              mountPath: /media
          ports:
            - name: http
              containerPort: 3001

---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
