services/immich/server/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    gethomepage.dev/href: 'https://immich.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: immich
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: immich
    gethomepage.dev/name: Immich
spec:
  ingressClassName: nginx
  rules:
    - host: immich.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: http
